# agentic-resume-generator

./: .gitignore  Scratchpad.ipynb  pyproject.toml  requirements.txt  test_html2pdf.py  test_resume_optimization.py
resume_generator/: optimizer.py  parser.py  pdf_generator.py
resume_generator/llm_utils/: __init__.py  logger.py  prompts.py  utils.py
resume_generator/llm_utils/llm/: __init__.py  assistants_id_logs.csv  oai_assistant.py
resume_generator/llm_utils/llm/providers/: __init__.py  base.py  openai.py
resume_generator/llm_utils/prompt_templates/extraction/: system.jinja  user.jinja
resume_generator/llm_utils/prompt_templates/optimization/: stage_1.jinja  stage_2.jinja  stage_3.jinja  stage_4.jinja  stage_5.jinja  system.jinja
resume_generator/models/: __init__.py  content.py  gaps.py  job.py  optimization.py  resume.py
templates/: sample.html
